versioned_docs/version-1.21.x/cli/server/index.mdx
---
title: "server"
description: "Get general information an instance"
---

<head>
  <link rel="canonical" href="https://www.reduct.store/docs/cli/server" />
</head>

# reduct-cli server

Get general information an instance

## Options

- `-i, --ignore-ssl`: Ignore SSL certificate verification
- `--ca-cert <PATH>`: Path to a custom CA certificate bundle/file
- `-T, --timeout <SECONDS>`: Timeout for requests
- `-p, --parallel <COUNT>`: Number of parallel requests
- `-j, --json`: Print output in JSON format
- `-h, --help`: Print help

## Help Output

```text
Get general information an instance

Usage: reduct-cli server [OPTIONS] [COMMAND]

Commands:
  alive    Check if an instance is alive
  status   Get the status of an instance
  license  Get information about the license
  help     Print this message or the help of the given subcommand(s)

Options:
  -i, --ignore-ssl         Ignore SSL certificate verification
      --ca-cert <PATH>     Path to a custom CA certificate bundle/file
  -T, --timeout <SECONDS>  Timeout for requests
  -p, --parallel <COUNT>   Number of parallel requests
  -j, --json               Print output in JSON format
  -h, --help               Print help
```

## Subcommands

### `alive`

Check if an instance is alive

#### Arguments

- `<ALIAS_OR_URL>`: Alias or URL (e.g. http://token@localhost:8383) of the ReductStore instance to use

#### Options

- `-i, --ignore-ssl`: Ignore SSL certificate verification
- `--ca-cert <PATH>`: Path to a custom CA certificate bundle/file
- `-T, --timeout <SECONDS>`: Timeout for requests
- `-p, --parallel <COUNT>`: Number of parallel requests
- `-j, --json`: Print output in JSON format
- `-h, --help`: Print help

#### Help Output

```text
Check if an instance is alive

Usage: reduct-cli server alive [OPTIONS] <ALIAS_OR_URL>

Arguments:
  <ALIAS_OR_URL>  Alias or URL (e.g. http://token@localhost:8383) of the ReductStore instance to use

Options:
  -i, --ignore-ssl         Ignore SSL certificate verification
      --ca-cert <PATH>     Path to a custom CA certificate bundle/file
  -T, --timeout <SECONDS>  Timeout for requests
  -p, --parallel <COUNT>   Number of parallel requests
  -j, --json               Print output in JSON format
  -h, --help               Print help
```

### `status`

Get the status of an instance

#### Arguments

- `<ALIAS_OR_URL>`: Alias or URL (e.g. http://token@localhost:8383) of the ReductStore instance to use

#### Options

- `-i, --ignore-ssl`: Ignore SSL certificate verification
- `--ca-cert <PATH>`: Path to a custom CA certificate bundle/file
- `-T, --timeout <SECONDS>`: Timeout for requests
- `-p, --parallel <COUNT>`: Number of parallel requests
- `-j, --json`: Print output in JSON format
- `-h, --help`: Print help

#### Help Output

```text
Get the status of an instance

Usage: reduct-cli server status [OPTIONS] <ALIAS_OR_URL>

Arguments:
  <ALIAS_OR_URL>  Alias or URL (e.g. http://token@localhost:8383) of the ReductStore instance to use

Options:
  -i, --ignore-ssl         Ignore SSL certificate verification
      --ca-cert <PATH>     Path to a custom CA certificate bundle/file
  -T, --timeout <SECONDS>  Timeout for requests
  -p, --parallel <COUNT>   Number of parallel requests
  -j, --json               Print output in JSON format
  -h, --help               Print help
```

### `license`

Get information about the license

#### Arguments

- `<ALIAS_OR_URL>`: Alias or URL (e.g. http://token@localhost:8383) of the ReductStore instance to use

#### Options

- `-i, --ignore-ssl`: Ignore SSL certificate verification
- `--ca-cert <PATH>`: Path to a custom CA certificate bundle/file
- `-T, --timeout <SECONDS>`: Timeout for requests
- `-p, --parallel <COUNT>`: Number of parallel requests
- `-j, --json`: Print output in JSON format
- `-h, --help`: Print help

#### Help Output

```text
Get information about the license

Usage: reduct-cli server license [OPTIONS] <ALIAS_OR_URL>

Arguments:
  <ALIAS_OR_URL>  Alias or URL (e.g. http://token@localhost:8383) of the ReductStore instance to use

Options:
  -i, --ignore-ssl         Ignore SSL certificate verification
      --ca-cert <PATH>     Path to a custom CA certificate bundle/file
  -T, --timeout <SECONDS>  Timeout for requests
  -p, --parallel <COUNT>   Number of parallel requests
  -j, --json               Print output in JSON format
  -h, --help               Print help
```
